update ruta img

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   <header class="topbar">
     <div class="container topbar-inner">
       <div class="brand">
-        <img src="../img/logo.jpg" alt="Logo Veterinaria Lotso" />
+        <img src="img/logo.jpg" alt="Logo Veterinaria Lotso" />
         <strong>Veterinaria LOTSO</strong>
       </div>
       <nav class="nav">
@@ -225,7 +225,7 @@
     <div class="hero-cards container">
       <article class="action-card">
         <div class="icon">
-          <img src="../img/veterinary.png" alt="Icono servicios" />
+          <img src="img/veterinary.png" alt="Icono servicios" />
         </div>
         <h3>Nuestros servicios</h3>
         <button class="btn">Conoce más</button>
@@ -233,7 +233,7 @@
 
       <article class="action-card">
         <div class="icon">
-          <img src="../img/clinic.png" alt="Icono clínicas" />
+          <img src="img/clinic.png" alt="Icono clínicas" />
         </div>
         <h3>Nuestras clínicas</h3>
         <button class="btn">Conoce más</button>
@@ -241,7 +241,7 @@
 
       <article class="action-card">
         <div class="icon">
-          <img src="../img/veterinarian.png" alt="Icono telemedicina" />
+          <img src="img/veterinarian.png" alt="Icono telemedicina" />
         </div>
         <h3>Telemedicina</h3>
         <button class="btn">Conoce más</button>
@@ -255,7 +255,7 @@
       <div class="derma-grid">
         <div class="derma-left">
           <!-- Sustituye por tu banner "Consulta Dermatológica Gratis" -->
-          <img src="../img/derma-banner.jpg" alt="Consulta dermatológica gratis" />
+          <img src="img/derma-banner.jpg" alt="Consulta dermatológica gratis" />
         </div>
 
         <div class="derma-right">
