add img banio en service

--- a/servicios.html
+++ b/servicios.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class="bg-white shadow-lg rounded-2xl p-6 text-center hover:scale-105 transition">
-      <img src="img/baño.jpg" alt="Baño y corte" class="mx-auto w-20 h-20 mb-4">
+      <img src="img/banio.jpg" alt="Baño y corte" class="mx-auto w-20 h-20 mb-4">
       <h3 class="font-bold text-xl mb-2">Baño y Corte</h3>
       <p class="text-gray-600 mb-4">Servicio profesional para que tu mascota luzca feliz y radiante.</p>
       <a href="#agenda" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">📅 Reservar</a>
